--- a/src/Members/Bundle/ManagementBundle/Resources/translations/messages.fr.yml
+++ b/src/Members/Bundle/ManagementBundle/Resources/translations/messages.fr.yml
@@ -1,8 +1,5 @@
 menu:
-    my_inbox: Mon Inbox
-    my_market: >
-            Mon marché
-    my_shop: Ma boutique
+    my_shop: Mes annonces
     new_article: Déposer une annonce
     my_settings: Mes parametres
     navigate_by_category : >
@@ -11,63 +8,19 @@ menu:
         search_in_all_site: Chercher dans tout le site
         search: Chercher
     home: Acceuil
-    
+
 errors:
-    follow:
-        login_to_follow: >
-            Vous devez etre connecté pour pouvoir s'abonner a cet utilisateur
-    chat:
-        login_to_chat: >
-            Vous devez etre connecté pour pouvoir chatter avec cet utilisateur
     pagination: >
             Cette valeur n'est pas valide !
 
 header_dialogs:
-    my_inbox:
-        about: >
-            à propos
-        at: >
-            à 
-        chat_with: Chat with
-        show_all_my_inbox: >
-            Toute la boite de réception
-        no_new_messages: Vous n'avez pas de nouveaux messages en ce moment.
-    my_network:
-        is_now_following_you: >
-            s'est abonné à votre boutique.
-        show_all_my_network: >
-            Toute la liste de mes abonnés.
-        no_new_followers: >
-            Vous n'avez pas de nouveaux abonnés en ce moment.
-    my_market:
-        at: >
-            à
-        show_all_my_market: >
-            Tout mon marché.
-        no_new_items: Il n' y a pas de nouveaux annonces provenant de vos abonnements.
-        empty: >
-            Votre marché est vide. Veuillez vous abonner à d'autres membres pour recevoir toutes leurs nouvelles annonces et avoir votre marché toujours mis à jour.
     my_shop:
-        empty: Votre boutique est vide. Pour commencer a vendre, veuillez cliquer sur "Déposer une annonce". 
+        empty: Votre n'avez pas encore d'annonces. Pour commencer a vendre, veuillez cliquer sur "Déposer une annonce".
 
 left:
-    all_my_inbox:
-        all_my_inbox: >
-            Ma boite de réception
-        no_messages: Vous n'avez recu aucun message jusuq'au moment.
-    all_my_network:
-        all_my_network: >
-            Mes abonnés
-        no_followers: >
-            Vous n'avez pas d'abonnés. Votre boutique est probablement inactive. Veuillez mettre de l'activité dans votre boutique en déposant des annonces.
     all_new_posters:
-        all_new_posters: Membres actifs 
+        all_new_posters: Membres actifs
         no_new_posters: Pas de membres actifs pour le moment.
-    all_my_followeds:
-        all_my_followeds: Mes abonnements
-        no_followeds: >
-            Vous n'etes abonné à personne. Veuillez cliquer sur "S'abonner" d'un membre qui vous interesse pour recevoir toutes ses nouvelles annonces en temps réel.
-
 item : article
 
 center:
@@ -80,41 +33,33 @@ center:
             Aucune annonce ne correspond à votre recherche. Essayez avec d'autres mots clé.
     shop:
         items_from: Annonces de
-        no_items_from: Il n'y a pas d'annonces provenant de 
+        no_items_from: Il n'y a pas d'annonces provenant de
     category:
-        no_items: Il n'y a pas d'annonces dans la catégorie 
-        
+        no_items: Il n'y a pas d'annonces dans la catégorie
+
 global:
-    follower: >
-        abonné
-    followers: >
-        abonnés
     article: annonce
     articles: annonces
     service: service
-    followed: abonnement
-    followeds: abonnements
     total: au total
-    follow: S'abonner
-    unfollow: >
-        Se désabonner
     result: >
         Résult
-    
+
 post:
     show:
-        edit: Editer
+        edit: Modifier
         delete: Supprimer
-        chat: Chatter
         sold: Vendu
         disponible: Disponible
         retweet: Re-déposer l'annonce
     new:
         enter_title: Le titre de votre annonce
-        enter_description: Le texte de votre annonce
+        enter_description: Le texte descriptif de votre annonce
         enter_price: Le prix
         product_or_service: Produit ou Service?
-        add_images_label: Ajouter des images(Min=1 et Max=8)
+        add_images_label: Ajouter des images (Min=1 et Max=8)
+        image_notice : >
+            La mise en ligne de photos peut prendre plusieurs minutes en fonctions de la taille de l'image et de la vitesse de connexion.
         create_article: >
             Créer
         cancel_article_creation: Annuler
@@ -125,10 +70,7 @@ post:
     edit:
         update: >
             Mettre à jour
-        
-        
-        
-        #########################33
+
 
 informatique:
     informatique: Informatique
