--- a/src/Members/Bundle/ManagementBundle/Resources/translations/validators.fr.yml
+++ b/src/Members/Bundle/ManagementBundle/Resources/translations/validators.fr.yml
@@ -10,13 +10,13 @@ post:
         not_blank: La description de votre annonce ne doit pas être vide.
         length:
             min: >
-                La description de votre annonce doit contenir au minimum 10 caractères.
+                La description de votre annonce doit contenir au minimum 20 caractères.
             max: >
-                La description de votre annonce ne doit pas dépasser 80 caractères.
+                La description de votre annonce ne doit pas dépasser 500 caractères.
     price:
-        not_blank: Le prix de votre annonce ne doit pas etre vide.
+        not_blank: Le prix de votre annonce ne doit pas être vide.
         greater_than_or_equal:  >
-                Le prix de votre annonce doit être supérieur ou egal a 0.
+                Le prix de votre annonce doit être supérieur ou égal a 0.
         type: >
                 Le prix de votre annonce doit être une valeur numérique.
         length: >
