--- a/src/Members/Bundle/ManagementBundle/Resources/translations/messages.en.yml
+++ b/src/Members/Bundle/ManagementBundle/Resources/translations/messages.en.yml
@@ -98,6 +98,8 @@ immobilier:
     autre: Autre
 la_maison:
     la_maison: Maison
+    electromenager : Electromenager
+    chambre_a_coucher : Chambre a coucher
     cuisine: Cuisine 
     meubles: Meubles
     decoration: Décoration
